# kotoba-v2025

./: Cargo.toml  README.md  context.md  crates-dependency-graph.jsonld  dag.jsonld  fcdb_persistent_cold.json  fcdb_persistent_warm.json  kotoba.schema.json  sled_cold.json  topology_data.jsonld
_archive/251006/: .dockerignore  .envrc  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  DESIGN.md  KOTOBA_FRAMEWORK.md  LICENSE  Makefile  PUBLISH_GUIDE.md  README.md  REFACTOR.md  RELEASE.md  dag.jsonnet  project.kotoba  robots.txt  rust_workflow.jsonnet  test_pure_functional.rs  topology_data.json  validate_topology.jsonnet
_archive/251006/.cargo/: config.toml
_archive/251006/.devcontainer/: Dockerfile  README.md  flake.nix  shell.nix
_archive/251006/.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
_archive/251006/.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
_archive/251006/.github/workflows/: README.md  ci.yml  dependency-update.yml  deploy-docs.yml  deploy-repl.yml  release.yml  security.yml  static.yml
_archive/251006/Formula/: README.md  kotoba.rb
_archive/251006/artifacts/: README.md  build_rs_cov.profraw  simple-static-build
_archive/251006/benches/: pure_functional_benchmark.rs
_archive/251006/config/: README.md  lib.jsonnet
_archive/251006/crates/005-vm/: .gitignore  Cargo.toml  Makefile  README.md  dag.jsonnet  digital_computing_system_paper.md
_archive/251006/docs/: README.md  index.md  next_functions.md
_archive/251006/docs/_docs/: nix-development.md  performance.md  process-network.md
_archive/251006/docs/_pages/: installation.md  quickstart.md
_archive/251006/docs/api/: README.md  core-types.md  database-api.md  query-language.md
_archive/251006/docs/deployment/: README.md
_archive/251006/docs/jsonnet/: README.md  compatibility_report.md
_archive/251006/docs/security/: CAPABILITIES_README.md  README.md
_archive/251006/examples/: README.md  auth_performance_test.rs  pure_functional_test.rs  redis_demo.rs  redis_demo.sh  simple_perf_test.rs
_archive/251006/examples/_site/: README.md  index.html  sitemap.xml
_archive/251006/examples/ai_agents/: README.md  chain_example.kotobas  chatbot.kotobas  react_agent.kotobas
_archive/251006/examples/algorithms/: README.md  graph_algorithms_demo.rs
_archive/251006/examples/api/: README.md  graphql-queries.graphql  graphql-server.rs
_archive/251006/examples/capabilities/: README.md  capabilities_demo.rs  capabilities_example.kotoba
_archive/251006/examples/components/: README.md  advanced-handlers.kotoba  minimal-kotoba.kotoba
_archive/251006/examples/config/: graphql-enabled.json  server-with-graphql.json  server-with-graphql.kotoba
_archive/251006/examples/database/: README.md  kotoba_db_basic.rs  kotoba_db_versioning.rs
_archive/251006/examples/densha/: README.md  app.kotobas  deploy.kotoba-deploy  docker-compose.yml  queries.graphql  schema.graphql
_archive/251006/examples/deploy/: README.md  microservices.kotoba-deploy  simple.kotoba-deploy
_archive/251006/examples/docs/: README-Built-in-Handlers.md  README-GitHub-Pages.md  README-GraphQL.md  README-Web-Handlers.md
_archive/251006/examples/frontend_app/: README.md  app.kotobanet  generated_app.tsx  test_app.html
_archive/251006/examples/honyaku/: README.md  en.kotoba  ja.kotoba  project.kotoba  users.kotoba  workflow.kotoba
_archive/251006/examples/http_server/: config.kotoba  config.kotoba.json  config.kotoba.jsonld  main.rs
_archive/251006/examples/misc/: MinimalDemo.tsx  README.md  js-template.js  (+1 more)
_archive/251006/k8s/: Chart.yaml  README.md  autoscaling.yaml  configmap.yaml  deploy.sh  ingress.yaml  namespace.yaml  services.yaml  statefulset.yaml  storage.yaml  values.yaml
_archive/251006/schemas/: README.md  capability-shapes.jsonld  catalog-ontology.jsonld  catalog-shapes.jsonld  follows.schema.json  ir-shapes.jsonld  kotoba.schema.json  pih.min.schema.v1.json  pih.min.schema.v1.jsonld  process-network-schema.json  process-network-schema.jsonld  user.schema.json
_archive/251006/scripts/: README.md  benchmark_jsonnet.rs  build-dependency-graph.py  check-wasm-build.sh  coverage_report.sh  extract-crate-metadata.py  extract-crate-metadata.rs  install-holochain-cli.sh  install-holochain-nix.sh  json-to-jsonld.rs  kotoba-cli-launcher.js  run-all-tests.sh  setup-holochain-env.sh  setup-nix.sh  update-layer-metadata.py  use-holochain-cli.sh  validate_topology.jsonnet  validate_topology.sh
_archive/251006/src/: lib.rs  main.rs
_archive/251006/tests/: README.md  cluster_test.rs  ldbc_snb.rs  run_topology_tests.sh  simple_test.rs  test_complex.kotoba  test_complex_output.tsx  test_output.tsx  test_output_improved.tsx  test_simple.kotoba  topology_validation.rs
_archive/251006/topology/: README.md  topology_data.json  topology_data.jsonld
crates/010-logic/010-kotoba-types/: Cargo.toml  metadata.jsonld
crates/010-logic/011-kotoba-ir/: Cargo.toml
crates/010-logic/019-kotoba-jsonld/: Cargo.toml
crates/010-logic/020-kotoba-os/: Cargo.toml  README.md  metadata.jsonld
crates/010-logic/020-kotoba-semanticos/: Cargo.toml  README.md
crates/010-logic/022-kotoba-owl-reasoner/: Cargo.toml  README.md  metadata.jsonld
crates/020-language/021-kotoba-parser/: Cargo.toml  metadata.jsonld
crates/020-language/022-kotoba-analyzer/: Cargo.toml  metadata.jsonld
crates/020-language/023-kotoba-kotobas/: Cargo.toml
crates/030-storage/031-kotoba-storage/: Cargo.toml  metadata.jsonld
crates/030-storage/036-kotoba-memory/: Cargo.toml
crates/engidb/: Cargo.toml
crates/engidb/src/: adapter.rs
crates/kotobas-tamaki-holochain/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_SUMMARY.md  PROGRESS_SUMMARY.md  README.md  VERIFICATION.md  WORKSPACE_FIX.md
crates/kotobas-tamaki-holochain/dna/: kotobasos.dna.yaml
crates/kotobas-tamaki-holochain/src/: dht.rs  error.rs  evolution.rs  kernel.rs  lib.rs  merkle.rs  provenance.rs  types.rs  utils.rs  zome.rs
crates/kotobas-tamaki-holochain/tests/: integration_tests.rs  unit_tests.rs
(+606 files in other folders)
