[workspace]
members = [
    "crates/010-core/009-kotoba-logic",
    "crates/010-core/010-kotoba-codebase",
    "crates/010-core/010-kotoba-types",
    "crates/010-core/011-kotoba-ir",
    "crates/010-core/012-kotoba-rewrite-kernel",
    "crates/010-core/013-kotoba-cid",
    "crates/010-core/014-kotoba-schema",
    "crates/010-core/015-kotoba-auth",
    "crates/010-core/016-kotoba-graph-core",
    "crates/010-core/017-kotoba-txlog",
    "crates/010-core/018-kotoba-api",
    # "crates/020-language/031-kotoba-language", # No Cargo.toml
    "crates/020-language/020-kotoba-syntax",
    "crates/020-language/021-kotoba-parser",
    "crates/020-language/022-kotoba-analyzer",
    "crates/020-language/023-kotoba-jsonnet",
    "crates/020-language/023-kotoba-kotobas",
    # "crates/060-services/064-kotoba-server-core", # No Cargo.toml
    # "crates/060-services/067-kotoba-server", # No Cargo.toml
    # "crates/060-services/065-kotoba-graph-api", # No Cargo.toml
    # "crates/070-deployment/072-kotoba-deploy", # No Cargo.toml
    # "crates/070-deployment/077-kotoba-deploy-cli", # No Cargo.toml
    # "crates/070-deployment/076-kotoba-deploy-controller", # No Cargo.toml
    # "crates/070-deployment/071-kotoba-deploy-core", # No Cargo.toml
    # "crates/070-deployment/075-kotoba-deploy-git", # No Cargo.toml
    # "crates/070-deployment/079-kotoba-deploy-hosting", # No Cargo.toml
    # "crates/070-deployment/074-kotoba-deploy-network", # No Cargo.toml
    # "crates/070-deployment/078-kotoba-deploy-runtime", # No Cargo.toml
    # "crates/070-deployment/073-kotoba-deploy-scaling", # No Cargo.toml
    "crates/090-tools/100-kotoba-cli",
    # "crates/090-tools/092-kotoba-build", # No Cargo.toml
    # "crates/090-tools/099-kotoba-backup", # No Cargo.toml
    # "crates/090-tools/098-kotoba-bench", # No Cargo.toml
    # "crates/090-tools/091-kotoba-config", # No Cargo.toml
    # "crates/090-tools/095-kotoba-docs", # No Cargo.toml
    # "crates/090-tools/093-kotoba-package-manager", # No Cargo.toml
    # "crates/090-tools/094-kotoba-runtime", # No Cargo.toml
    # "crates/090-tools/096-kotoba-ssg", # No Cargo.toml
    # "crates/090-tools/097-kotoba-tester", # No Cargo.toml
    # "tests/integration", # No Cargo.toml
    # "examples/vercel", # No Cargo.toml
]
exclude = [
    "crates/020-language/022-kotoba-sem",
    "examples/densha",
]
resolver = "2"

[workspace.package]
version = "0.1.22"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"

[workspace.dependencies]
# Common dependencies can be defined here
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
sha2 = { version = "0.10", features = ["std"] }
hex = "0.4"
hmac = "0.12"
parking_lot = "0.12"
regex = "1.10"
rocksdb = "0.21"
tempfile = "3.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tokio = { version = "1.0", features = ["full"] }
wasmtime = "0.35"
rand = "0.8"
futures = "0.3"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "multipart"] }
schemars = { version = "0.8", features = ["uuid1"] }
jsonschema = "0.17"
blake3 = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
hyper = { version = "1.0", features = ["full"] }

# Kotoba workspace crates
kotoba-logic = { path = "crates/010-core/009-kotoba-logic", version = "0.1.22" }
kotoba-codebase = { path = "crates/010-core/010-kotoba-codebase", version = "0.1.22" }
kotoba-types = { path = "crates/010-core/010-kotoba-types", version = "0.1.22" }
kotoba-ir = { path = "crates/010-core/011-kotoba-ir", version = "0.1.22" }
kotoba-rewrite-kernel = { path = "crates/010-core/012-kotoba-rewrite-kernel", version = "0.1.22" }
kotoba-cid = { path = "crates/010-core/013-kotoba-cid", version = "0.1.22" }
kotoba-schema = { path = "crates/010-core/014-kotoba-schema", version = "0.1.22" }
kotoba-auth = { path = "crates/010-core/015-kotoba-auth", version = "0.1.0" }
kotoba-graph-core = { path = "crates/010-core/016-kotoba-graph-core", version = "0.1.22" }
kotoba-txlog = { path = "crates/010-core/017-kotoba-txlog", version = "0.1.22" }
kotoba-api = { path = "crates/010-core/019-kotoba-api", version = "0.1.22" }
# kotoba-graph temporarily disabled
# kotoba-graph = { path = "crates/030-storage/kotoba-graphdb", version = "0.1.21" }
kotoba-storage = { path = "crates/030-storage/kotoba-storage", version = "0.1.21" }
kotoba-execution = { path = "crates/040-application/kotoba-execution", version = "0.1.21" }
kotoba-rewrite = { path = "crates/040-application/kotoba-rewrite", version = "0.1.21" }
kotoba-jsonnet = { path = "crates/020-language/kotoba-jsonnet", version = "0.1.17" }
kotoba-routing = { path = "crates/040-application/kotoba-routing", version = "0.1.16" }
kotoba-workflow-core = { path = "crates/050-workflow/kotoba-workflow-core", version = "0.1.21" }
kotoba-workflow = { path = "crates/050-workflow/kotoba-workflow", version = "0.1.21" }
kotoba-workflow-activities = { path = "crates/050-workflow/kotoba-workflow-activities", version = "0.1.21" }
kotoba-workflow-operator = { path = "crates/050-workflow/kotoba-workflow-operator", version = "0.1.21" }
kotoba-deploy-core = { path = "crates/070-deployment/kotoba-deploy-core", version = "0.1.21" }
kotoba-deploy-controller = { path = "crates/070-deployment/kotoba-deploy-controller", version = "0.1.21" }
kotoba-deploy-runtime = { path = "crates/070-deployment/kotoba-deploy-runtime", version = "0.1.21" }
kotoba-deploy-scaling = { path = "crates/070-deployment/kotoba-deploy-scaling", version = "0.1.21" }
kotoba-deploy-network = { path = "crates/070-deployment/kotoba-deploy-network", version = "0.1.21" }

# Fix digest version conflict
digest = "0.10.7"

# Core crates (local workspace paths for development)
# These are workspace members, not external dependencies
# kotoba-core = { path = "crates/kotoba-core", version = "0.1.21" }
# kotoba-errors = { path = "crates/kotoba-errors", version = "0.1.2" }
# kotoba-graph moved to optional dependencies
# kotoba-storage = { path = "crates/kotoba-storage", version = "0.1.21" }
# kotoba-execution moved to optional dependencies below
# kotoba-rewrite = { path = "crates/kotoba-rewrite", version = "0.1.21" }

# Root crate configuration
[package]
name = "kotoba-main"
version = "0.1.22"
edition = "2021"
description = "GP2-based Graph Rewriting Language - ISO GQL-compliant queries, MVCC+Merkle persistence, and distributed execution"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"
keywords = ["graph", "database", "gql", "rewrite", "distributed"]
categories = ["database", "data-structures", "algorithms"]
authors = ["Jun Kawasaki <jun784@example.com>"]
readme = "README.md"
documentation = "https://docs.rs/kotoba"
homepage = "https://github.com/com-junkawasaki/kotoba"
exclude = ["examples/**/*"]

[[bin]]
name = "kotoba"
path = "src/main.rs"


[profile.bench]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# Core crates - workspace versions
# kotoba-core = { path = "crates/kotoba-core" } # Temporarily disabled to avoid confusion
# kotoba-graph moved to optional dependencies
# kotoba-storage = { path = "crates/kotoba-storage" }
# kotoba-schema = { path = "crates/kotoba-schema" }
# kotoba-execution moved to optional dependencies
# kotoba-rewrite = { path = "crates/kotoba-rewrite" }
# kotoba-security.workspace = true
# kotoba-server = { path = "crates/kotoba-server" }

# Core crates only (published versions)
# Optional crates are disabled for stable core focus
# kotoba-package-manager = { path = "crates/kotoba-package-manager" }
# kotoba-execution temporarily disabled
# kotoba-execution = { path = "crates/kotoba-execution" }
# kotoba-graph temporarily disabled
# kotoba-graph = { path = "crates/kotoba-graph" }
# kotoba-kotobas temporarily disabled
# kotoba-kotobas = { path = "crates/kotoba-kotobas" }
# kotoba-repl = { path = "crates/kotoba-repl" }
# kotoba-formatter temporarily disabled
# kotoba-formatter = { path = "crates/kotoba-formatter" }
# kotoba-linter = { path = "crates/kotoba-linter" } # CLIバイナリとして独立実行
# kotoba-tester = { path = "crates/kotoba-tester" } # CLIバイナリとして独立実行
# kotoba-build = { path = "crates/kotoba-build" } # CLIバイナリとして独立実行
# kotoba-deploy-cli = { path = "crates/kotoba-deploy-cli" }  # 依存関係の問題があるため一時的に無効化
# kotoba-backup = { path = "crates/kotoba-backup" }  # 動作確認のため一時的に無効化

# Schema and CID dependencies
schemars.workspace = true
jsonschema.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
hmac = "0.12"
regex.workspace = true
thiserror.workspace = true
tempfile.workspace = true

# Core crates
kotoba-repl = { path = "crates/020-language/027-kotoba-repl", version = "0.1.22" }

# For binary
clap = { version = "4.0", features = ["derive"] }
rustc_version = "0.4"
chrono = { version = "0.4", features = ["serde"] }
# colored = "2.0" # サブプロセス経由で実行するため不要
# indicatif = "0.17" # サブプロセス経由で実行するため不要
# serde_yaml = "0.9" # サブプロセス経由で実行するため不要

# Optional crates for different use cases
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }

# Vercel deployment
vercel_runtime = { version = "1.0", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
default = []
# full = ["tokio", "log", "env_logger", "examples", "binary", "server", "package-manager", "execution", "graph", "kotobas", "repl", "formatter"]
# binary = ["clap"]
examples = []
types = []
ir = []
# graph moved to line 183
storage = []
# execution moved to line 182
planner = []
rewrite = []
http = []
frontend = []
wasm = []
deploy = []
# server = ["kotoba-server"]
# package-manager = ["kotoba-package-manager"]
# execution = ["kotoba-execution"]
# graph = ["kotoba-graph"]
# kotobas = ["kotoba-kotobas"]
# repl = ["kotoba-repl"]
# formatter = ["kotoba-formatter"]
vercel = ["vercel_runtime", "reqwest"]
lsm = []

# Platform-specific features
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

[dev-dependencies]
# Coverage and testing tools
cargo-tarpaulin = "0.29"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
rayon = "1.7"

# Benchmarks temporarily disabled
# [[bench]]
# name = "graph_operations"
# path = "benches/graph_operations.rs"
# harness = false

# [[bench]]
# name = "query_execution"
# path = "benches/query_execution.rs"
# harness = false

# [[bench]]
# name = "rewrite_operations"
# path = "benches/rewrite_operations.rs"
# harness = false

# [[bench]]
# name = "storage_operations"
# path = "benches/storage_operations.rs"
# harness = false

# [[bench]]
# name = "jsonnet_benchmark"
# path = "benches/jsonnet_benchmark.rs"
# harness = false

# [[bench]]
# name = "parallel_processing"
# path = "benches/parallel_processing.rs"
# harness = false

# [[bench]]
# name = "advanced_algorithms"
# path = "benches/advanced_algorithms.rs"
# harness = false

# Examples are excluded from publish to avoid dependency issues
# [[example]]
# name = "http_server"
# path = "examples/http_server/main.rs"

# Jsonnet benchmark binary removed due to compilation issues

# [[example]]
# name = "tauri_react_app"
# path = "examples/tauri_react_app/src-tauri/src/main.rs"

[patch.crates-io]
