[package]
name = "engidb"
version = "0.1.0"
edition = "2021"

[dependencies]
kotoba-types = { path = "../kotoba-types" }
sled = "0.34"
cid = { version = "0.11.1", default-features = false, features = ["serde-codec"] }
serde_ipld_dagcbor = "0.4.0"
multihash = { version = "0.19.3", default-features = false }
sha2 = "0.10"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# FCDB dependencies - only included when fcdb feature is enabled
fcdb-core = { version = "0.1", optional = true }
fcdb-cas = { version = "0.1", optional = true }
fcdb-graph = { version = "0.1", optional = true }
fcdb-concur = { version = "0.1", optional = true }

# Additional dependencies for FCDB adapter
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
# Enable FCDB adapter with full implementation
fcdb = ["fcdb-core", "fcdb-cas", "fcdb-graph", "fcdb-concur", "tokio", "serde_json"]
