[package]
name = "kotoba-types"
version = "0.1.22"
edition = "2021"
description = "Core type definitions for the Kotoba ecosystem including CID, graph types, and error handling."
license = "Apache-2.0"

[dependencies]
kotoba-logic = { path = "../009-kotoba-logic" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
hex = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
schemars = { workspace = true, features = ["uuid1"] }
thiserror = { workspace = true }
