[package]
name = "kotoba-ir"
version = "0.1.22"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"
description = "Intermediate Representation (IR) system for Kotoba - catalog-IR, rule-IR, query-IR, patch-IR, strategy-IR"
keywords = ["ir", "intermediate", "representation", "graph", "rewrite"]
categories = ["data-structures", "algorithms"]

[dependencies]
kotoba-types = { path = "../010-kotoba-types" }
kotoba-jsonld = { path = "../019-kotoba-jsonld" }
kotoba-owl-reasoner = { path = "../022-kotoba-owl-reasoner", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"

[features]
default = []
reasoning = ["kotoba-owl-reasoner"]
