[package]
name = "kotoba-jsonld"
version = "0.1.22"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-LD utilities for Kotoba graph processing"
keywords = ["jsonld", "json-ld", "rdf", "semantic-web", "linked-data"]
categories = ["web-programming", "data-structures", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-jsonld"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
# Kotoba ecosystem
kotoba-types = { path = "../010-kotoba-types" }
kotoba-cid = { path = "../013-kotoba-cid" }

# JSON processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP client for fetching contexts from GitHub
reqwest = { version = "0.11", features = ["json"] }

# URL parsing
url = "2.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

