[package]
name = "kotoba-os"
version = "0.1.22"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "KotobaOS Kernel + Actor + Mediator pattern for Kotoba"
keywords = ["kotobaos", "kernel", "actor", "mediator", "process-network", "json-ld"]
categories = ["web-programming", "asynchronous", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-os"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
# Kotoba ecosystem
kotoba-jsonld = { path = "../019-kotoba-jsonld" }
kotoba-types = { path = "../010-kotoba-types" }
kotoba-owl-reasoner = { path = "../022-kotoba-owl-reasoner", optional = true }

# Storage
kotoba-storage = { path = "../../030-storage/031-kotoba-storage" }

# fukurow crates for OWL reasoning
fukurow-core = { git = "https://github.com/com-junkawasaki/fukurow", default-features = false }
fukurow-store = { git = "https://github.com/com-junkawasaki/fukurow", default-features = false }
fukurow-rdfs = { git = "https://github.com/com-junkawasaki/fukurow", default-features = false }
fukurow-lite = { git = "https://github.com/com-junkawasaki/fukurow", default-features = false }
fukurow-dl = { git = "https://github.com/com-junkawasaki/fukurow", default-features = false }
fukurow-shacl = { git = "https://github.com/com-junkawasaki/fukurow", default-features = false }

# JSON processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# URL parsing
url = "2.5"

# UUID generation
uuid = { version = "1.18", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

[features]
default = []
reasoning = ["kotoba-owl-reasoner"]

[dev-dependencies]
tokio-test = "0.4"
kotoba-storage-memory = { path = "../../030-storage/036-kotoba-memory" }

