[package]
name = "kotoba-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Kotoba core dependencies
kotoba-logic = { path = "../../010-logic/009-kotoba-logic" }
kotoba-types = { path = "../../010-logic/010-kotoba-types" }
kotoba-ir = { path = "../../010-logic/011-kotoba-ir" }

# Kotoba language dependencies
kotoba-syntax = { path = "../020-kotoba-syntax" }
