[package]
name = "kotoba-analyzer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic Analyzer for the Kotoba language, performing type checking and producing IR."

[dependencies]
# Kotoba core dependencies
kotoba-logic = { path = "../../010-logic/009-kotoba-logic" }
kotoba-types = { path = "../../010-logic/010-kotoba-types" }
kotoba-ir = { path = "../../010-logic/011-kotoba-ir" }
# kotoba-codebase = { path = "../../010-core/010-kotoba-codebase" } # No Cargo.toml

# Kotoba language dependencies
kotoba-syntax = { path = "../020-kotoba-syntax" }
kotoba-parser = { path = "../021-kotoba-parser" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
