[package]
name = "kotoba-kotobas"
version = "0.1.22"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"
description = "KotobaScript - Declarative programming language for frontend applications, extending Jsonnet with React component definitions"
keywords = ["jsonnet", "programming-language", "frontend", "react", "declarative"]
categories = ["config", "template-engine", "web-programming", "development-tools"]

[dependencies]
kotoba-jsonld = { path = "../../010-logic/019-kotoba-jsonld" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
regex = "1.10"
uuid = { version = "1.18", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }

# Kotoba core dependencies
kotoba-logic = { path = "../../010-logic/009-kotoba-logic" }
kotoba-types = { path = "../../010-logic/010-kotoba-types" }
kotoba-ir = { path = "../../010-logic/011-kotoba-ir" }
kotoba-rewrite-kernel = { path = "../../010-logic/012-kotoba-rewrite-kernel" }
# Note: Additional core dependencies commented out due to compilation issues
# kotoba-cid = { path = "../../010-logic/013-kotoba-cid" }
# kotoba-schema = { path = "../../010-logic/014-kotoba-schema" }
# kotoba-auth = { path = "../../010-logic/015-kotoba-auth" }
# kotoba-graph-core = { path = "../../010-logic/016-kotoba-graph-core" }
# kotoba-txlog = { path = "../../010-logic/017-kotoba-txlog" }
# kotoba-api = { path = "../../010-logic/018-kotoba-api" }

# Kotoba language dependencies
kotoba-syntax = { path = "../020-kotoba-syntax" }
kotoba-parser = { path = "../021-kotoba-parser" }
kotoba-analyzer = { path = "../022-kotoba-analyzer" }
kotoba-jsonnet = { path = "../023-kotoba-jsonnet" }

# Merkle DAG dependencies
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["async"]
async = ["tokio"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
