[package]
name = "kotoba-storage"
version = "0.1.22"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage abstractions and interfaces for Kotoba"
keywords = ["storage", "database", "interface", "trait"]
categories = ["database"]

[dependencies]
# kotoba-core = { path = "../../010-core/012-kotoba-core" } # Removed: not used in source code
kotoba-jsonld = { path = "../../010-logic/019-kotoba-jsonld" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
