[package]
name = "kotoba-vercel-api"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "vercel-graphql"
path = "main.rs"

[[test]]
name = "ocel_tests"
path = "tests.rs"

[[test]]
name = "facebook_social_graph"
path = "test_facebook.rs"

[[test]]
name = "facebook_performance_analysis"
path = "test_facebook_performance_analysis.rs"

[[bin]]
name = "debug-redis"
path = "debug_redis.rs"

[dependencies]
# Vercel runtime
vercel_runtime = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# GraphQL
async-graphql = { version = "6.0", features = ["dynamic-schema", "apollo_tracing"] }
async-graphql-axum = "6.0"

# Redis
redis = { version = "0.23", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lazy static for global context
lazy_static = "1.4"
        # Kotoba storage crates
        kotoba-storage-redis = { path = "../../crates/100-storage/kotoba-storage-redis", version = "0.1.22" }
        kotoba-storage = { path = "../../crates/100-storage/kotoba-storage", version = "0.1.22" }
        kotoba-graphdb = { path = "../../crates/100-storage/kotoba-graphdb", version = "0.1.22" }

# Hyper for body conversion
hyper = "1.0"
# For HTTP body utilities
http-body-util = "0.1"
# Tower utilities
tower = "0.4"
