[package]
name = "kotoba-core-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies for basic type testing
tokio = { version = "1.0", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# Core kotoba crates
kotoba-core = { path = "../../crates/000-core/kotoba-core", version = "0.1.22" }
kotoba-errors = { path = "../../crates/000-core/kotoba-errors", version = "0.1.2" }
