[package]
name = "kotoba-application-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# Kotoba crates (core + storage + application layers)
kotoba-core = { path = "../../crates/000-core/kotoba-core", version = "0.1.22" }
kotoba-errors = { path = "../../crates/000-core/kotoba-errors", version = "0.1.2" }
# kotoba-storage = { path = "../../crates/100-storage/kotoba-storage", version = "0.1.21" }
# kotoba-memory = { path = "../../crates/100-storage/kotoba-memory", version = "0.1.21" }
kotoba-event-stream = { path = "../../crates/200-application/kotoba-event-stream", version = "0.1.0" }
kotoba-query-engine = { path = "../../crates/200-application/kotoba-query-engine", version = "0.1.0" }
