[package]
name = "kotoba-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core crates
kotoba-core = { path = "../../crates/000-core/kotoba-core", version = "0.1.22" }
kotoba-errors = { path = "../../crates/000-core/kotoba-errors", version = "0.1.2" }
kotoba-cid = { path = "../../crates/000-core/kotoba-cid", version = "0.1.22" }
kotoba-ocel = { path = "../../crates/000-core/kotoba-ocel", version = "0.1.22" }
kotoba-schema = { path = "../../crates/000-core/kotoba-schema", version = "0.1.22" }


# Storage layer
kotoba-storage = { path = "../../crates/100-storage/kotoba-storage", version = "0.1.21" }
# kotoba-memory = { path = "../../crates/100-storage/kotoba-memory", version = "0.1.21" }
kotoba-graphdb = { path = "../../crates/100-storage/kotoba-graphdb", version = "0.1.21" }
kotoba-db-cluster = { path = "../../crates/100-storage/kotoba-db-cluster", version = "0.1.16", optional = true }

# Application layer
kotoba-event-stream = { path = "../../crates/200-application/kotoba-event-stream", version = "0.1.0" }
kotoba-projection-engine = { path = "../../crates/200-application/kotoba-projection-engine", version = "0.1.0" }
kotoba-query-engine = { path = "../../crates/200-application/kotoba-query-engine", version = "0.1.0" }
kotoba-execution = { path = "../../crates/200-application/kotoba-execution", version = "0.1.21" }
kotoba-rewrite = { path = "../../crates/200-application/kotoba-rewrite", version = "0.1.21" }

# Services layer
kotoba-server = { path = "../../crates/500-services/kotoba-server", version = "0.1.22" }

# Language layer
kotoba-jsonnet = { path = "../../crates/400-language/kotoba-jsonnet", version = "0.1.17" }
kotoba-jsonld = { path = "../../crates/010-logic/019-kotoba-jsonld" }

# Testing utilities
tokio = { version = "1.0", features = ["full", "test-util"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }

# Additional dependencies for test infrastructure
once_cell = "1.19"
itertools = "0.12"

# Testing frameworks
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
cluster = ["kotoba-db-cluster"]
