[package]
name = "kotoba-cid"
version = "0.1.22"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content ID (CID) system for Kotoba graph processing"
keywords = ["cid", "content-addressing", "hash", "merkle", "cryptography"]
categories = ["cryptography", "data-structures", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-cid"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
# Kotoba ecosystem
kotoba-types = { path = "../010-kotoba-types" }
kotoba-graph-core = { path = "../016-kotoba-graph-core" }

# Hash algorithms
sha2 = "0.10"
blake3 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Base64 encoding for JCS canonicalization
base64 = "0.21"

# Hex encoding/decoding
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
