[package]
name = "kotoba-schema"
version = "0.1.22"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph Schema Definition and Validation for Kotoba"
keywords = ["graph", "schema", "validation", "gql", "database"]
categories = ["data-structures", "algorithms"]
documentation = "https://docs.rs/kotoba-schema"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
# Core dependencies
kotoba-types = { path = "../010-kotoba-types" }
kotoba-ir = { path = "../011-kotoba-ir" }
kotoba-graph-core = { path = "../016-kotoba-graph-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

# HTTP client for fetching schemas
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
url = { version = "2.2", optional = true }

# Async runtime for reqwest
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
rand = "0.8"

# Schema validation
schemars = { version = "0.8", features = ["derive"] }
jsonschema = "0.17"

[features]
default = ["std"]
std = []
# graph feature temporarily disabled
# graph = ["dep:kotoba-graph"]
# Placeholder features for future use
graph = []
async = []
