[package]
name = "kotoba-graph-core"
version = "0.1.22"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Incidence bipartite graph + canonicalization + merkle for content-addressed graphs"

[dependencies]
kotoba-logic = { path = "../009-kotoba-logic" }
kotoba-types = { path = "../010-kotoba-types" }
kotoba-codebase = { path = "../010-kotoba-codebase" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
blake3.workspace = true
parking_lot.workspace = true
